fix(action-button-text): remove flexbox and replace gap with margins

--- a/packages/ui-components/src/components/action-button-text/action-button-text.scss
+++ b/packages/ui-components/src/components/action-button-text/action-button-text.scss
@@ -15,9 +15,12 @@ kv-icon {
 	--icon-height: var(--button-icon-width);
 }
 
-kv-action-button::part(button) {
-	display: flex;
-	gap: $spacing-2x;
+.left-icon {
+	margin-right: $spacing-2x;
+}
+
+.right-icon {
+	margin-left: $spacing-2x;
 }
 
 .action-button-text {
